Fix z-index issue on poll page

--- a/pages/assets/css/poll.css
+++ b/pages/assets/css/poll.css
@@ -25,7 +25,7 @@
     display: none;
     align-items: center;
     justify-content: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 #modal {
